# ITMO_ICT_WebDevelopment_2022-2023

./: .gitignore  404.html  HW1_front.docx  LICENSE  README.md  SUMMARY.md  docker-compose.yml  index.html  laboratornaya-rabota-1..md  laboratornaya-rabota-3.md
students/k33402/Timofeev_Nikolay/LR1/: pyproject.toml
students/k33402/Timofeev_Nikolay/LR1/docs/: index.md
students/k33402/Timofeev_Nikolay/LR1/src/http_socket_server/: index.html  server.py
students/k33402/Timofeev_Nikolay/LR1/src/simple_socket_server/: client.py  server.py
students/k33402/Timofeev_Nikolay/LR1/src/socket_chat_server/: client.py  server.py
students/k33402/Timofeev_Nikolay/LR1/src/socket_framework/: form.html  server.py  style.css  utils.py
students/k33402/Timofeev_Nikolay/LR1/src/socket_server_math/: client.py  server.py
students/k33421/laboratory_works/Lipina_Olga/laboratory_work_2_2/race_winners_project/: manage.py  pyproject.toml
students/k33421/laboratory_works/Lipina_Olga/laboratory_work_2_2/race_winners_project/race_winners_project/: asgi.py  settings.py  urls.py  wsgi.py
students/k33421/laboratory_works/Lipina_Olga/laboratory_work_2_2/race_winners_project/racers_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
students/k33421/laboratory_works/Lipina_Olga/laboratory_work_2_2/race_winners_project/templates/: base_django.html  comment_create.html  comments_list.html  (+12 more)
students/k33421/practical_works/Lipina_Olga/simple_django_web_project/: pyproject.toml
students/k33421/practical_works/Lipina_Olga/simple_django_web_project/django_project_Lipina/: manage.py
(+7444 files in other folders)
