[tool.poetry]
name = "lr1"
version = "0.1.0"
description = ""
authors = ["Nikolas <timofeevnik41@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
