[tool.poetry]
name = "simple_django_web_project"
version = "0.1.0"
description = "'Practical works, Django'"
authors = ["Olga Lipina <neon_alfa@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
