[tool.poetry]
name = "race_winners_project"
version = "0.1.0"
description = ""
authors = ["Olga Lipina <neon_alfa@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
